# cuda_cpp_proj

./: CMakeLists.txt  README.md  install_prereq_linux.sh
include/cuda_lab/: cuda_util.h  helper.h
output/: features.csv
sample_data/: p0_y1_r17_c0.ome.tif
src/: abs_tile_loader.h  cuda_funcs.h  cuda_helper.h  grayscale_tiled_tiff.h  helper.h  main.cpp
